--- a/index.html
+++ b/index.html
@@ -201,6 +201,48 @@
         </div>
       </div>
     </div>
+    <div class="gallery container">
+      <div class="row">
+        <div class="col-lg-4 ">
+          <div class="card">
+            <img src="img/img-1.png" alt="" class="img-responsive" class="card-img-top">
+            <div class="card-body">
+              <p class="card-text">deskripsi</p>
+              <div class="btn-group">
+                <button type="button" class="btn btn-md btn-outline-primary">Lihat</button>
+                <button type="button" class="btn btn-md btn-outline-secondary">Edit</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 ">
+          <div class="card">
+            <img src="img/img-1.png" alt="" class="img-responsive" class="card-img-top">
+            <div class="card-body">
+              <p class="card-text">deskripsi</p>
+              <div class="btn-group">
+                <button type="button" class="btn btn-md btn-outline-primary">Lihat</button>
+                <button type="button" class="btn btn-md btn-outline-secondary">Edit</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 ">
+          <div class="card">
+            <img src="img/img-1.png" alt="" class="img-responsive" class="card-img-top">
+            <div class="card-body">
+              <p class="card-text">deskripsi</p>
+              <div class="btn-group">
+                <button type="button" class="btn btn-md btn-outline-primary">Lihat</button>
+                <button type="button" class="btn btn-md btn-outline-secondary">Edit</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
   </section>
   <!-- End Projects Section -->
 
