--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
       </div>
     </div>
     <div class="gallery container">
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-lg-4 ">
-          <div class="card">
+          <div class="card  justify-content-center">
             <img src="img/img-1.png" alt="" class="img-responsive" class="card-img-top">
             <div class="card-body">
               <p class="card-text">deskripsi</p>
@@ -217,7 +217,7 @@
         </div>
 
         <div class="col-lg-4 ">
-          <div class="card">
+          <div class="card justify-content-center">
             <img src="img/img-1.png" alt="" class="img-responsive" class="card-img-top">
             <div class="card-body">
               <p class="card-text">deskripsi</p>
@@ -230,7 +230,7 @@
         </div>
 
         <div class="col-lg-4 ">
-          <div class="card">
+          <div class="card justify-content-center">
             <img src="img/img-1.png" alt="" class="img-responsive" class="card-img-top">
             <div class="card-body">
               <p class="card-text">deskripsi</p>
